--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
       env:
         MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     - name: Build with Maven
-      run: mvn -B package --file pom.xml "$MONGO_PASSWORD"
+      run: mvn -B package --file pom.xml ${{ MONGO_PASSWORD }}
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
